src/parse/parsetiger.output
Terminals unused in grammar

    "_cast"


State 2 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program "end of file"

    1 program: exp
    2        | chunks

    3 rec_exps: ε
    4         | ";" exps

    5 exps: exp rec_exps
    6     | ε

    7 record_creation: typeid "=" exp
    8                | typeid "=" exp record_init
    9                | ε

   10 record_init: "," "identifier" "=" exp
   11            | "," "identifier" "=" exp record_init

   12 function_param: exp
   13               | exp "," function_param

   14 method_call: "," exp
   15            | ε

   16 exp: "integer"
   17    | "nil"
   18    | "string"
   19    | typeid "[" exp "]" "of" exp
   20    | typeid "{" record_creation "}"
   21    | lvalue
   22    | "identifier" "(" ")"
   23    | "identifier" "(" function_param ")"
   24    | "-" exp
   25    | exp "+" exp
   26    | exp "-" exp
   27    | exp "*" exp
   28    | exp "/" exp
   29    | exp "=" exp
   30    | exp "<>" exp
   31    | exp ">" exp
   32    | exp "<" exp
   33    | exp ">=" exp
   34    | exp "<=" exp
   35    | exp "&" exp
   36    | exp "|" exp
   37    | "(" exps ")"
   38    | lvalue ":=" exp
   39    | "if" exp "then" exp
   40    | "if" exp "then" exp "else" exp
   41    | "while" exp "do" exp
   42    | "for" "identifier" ":=" exp "to" exp "do" exp
   43    | "break"
   44    | "let" chunks "in" exps "end"
   45    | "new" typeid
   46    | lvalue "." "identifier" "(" ")"
   47    | lvalue "." "identifier" "(" exp method_call ")"

   48 lvalue: "identifier"
   49       | lvalue "." "identifier"
   50       | lvalue "[" exp "]"

   51 vardec: "var" "identifier" ":=" exp
   52       | "var" "identifier" ":" typeid ":=" exp

   53 fundec: "function" "identifier" "(" tyfields ")" "=" exp
   54       | "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   55       | "primitive" "identifier" "(" tyfields ")"
   56       | "primitive" "identifier" "(" tyfields ")" ":" typeid

   57 chunks: ε
   58       | tychunk chunks
   59       | fundec chunks
   60       | vardec chunks
   61       | "import" "string" chunks

   62 tychunk: tydec
   63        | tydec tychunk

   64 tydec: "type" "identifier" "=" ty
   65      | "class" "identifier" "{" classfields "}"
   66      | "class" "identifier" "extends" typeid "{" classfields "}"

   67 ty: typeid
   68   | "{" tyfields "}"
   69   | "array" "of" typeid
   70   | "class" "{" classfields "}"
   71   | "class" "extends" typeid "{" classfields "}"

   72 classfields: ε
   73            | vardec classfields
   74            | "method" "identifier" "(" tyfields ")" "=" exp classfields
   75            | "method" "identifier" "(" tyfields ")" ":" typeid "=" exp classfields

   76 tyfields: ε
   77         | tyfields.1

   78 tyfields.1: tyfields.1 "," tyfield
   79           | tyfield

   80 tyfield: "identifier" ":" typeid

   81 typeid: "identifier"
   82       | "_namety" "(" "integer" ")"


Terminals, with rules where they appear

    "end of file" (0) 0
    error (256)
    "string" <std::string> (258) 18 61
    "identifier" <misc::symbol> (259) 10 11 22 23 42 46 47 48 49 51 52 53 54 55 56 64 65 66 74 75 80 81
    "integer" <int> (260) 16 82
    "&" (261) 35
    "array" (262) 69
    ":=" (263) 38 42 51 52
    "break" (264) 43
    "_cast" (265)
    "class" (266) 65 66 70 71
    ":" (267) 52 54 56 75 80
    "," (268) 10 11 13 14 78
    "/" (269) 28
    "do" (270) 41 42
    "." (271) 46 47 49
    "else" (272) 40
    "end" (273) 44
    "=" (274) 7 8 10 11 29 53 54 64 74 75
    "extends" (275) 66 71
    "for" (276) 42
    "function" (277) 53 54
    ">=" (278) 33
    ">" (279) 31
    "if" (280) 39 40
    "import" (281) 61
    "in" (282) 44
    "{" (283) 20 65 66 68 70 71
    "[" (284) 19 50
    "<=" (285) 34
    "let" (286) 44
    "(" (287) 22 23 37 46 47 53 54 55 56 74 75 82
    "<" (288) 32
    "-" (289) 24 26
    "method" (290) 74 75
    "<>" (291) 30
    "new" (292) 45
    "nil" (293) 17
    "of" (294) 19 69
    "|" (295) 36
    "+" (296) 25
    "primitive" (297) 55 56
    "}" (298) 20 65 66 68 70 71
    "]" (299) 19 50
    ")" (300) 22 23 37 46 47 53 54 55 56 74 75 82
    ";" (301) 4
    "then" (302) 39 40
    "*" (303) 27
    "to" (304) 42
    "type" (305) 64
    "var" (306) 51 52
    "while" (307) 41
    UMINUS (308)
    "_chunks" (309)
    "_namety" (310) 82


Nonterminals, with rules where they appear

    $accept (56)
        on left: 0
    program (57)
        on left: 1 2
        on right: 0
    rec_exps (58)
        on left: 3 4
        on right: 5
    exps (59)
        on left: 5 6
        on right: 4 37 44
    record_creation (60)
        on left: 7 8 9
        on right: 20
    record_init (61)
        on left: 10 11
        on right: 8 11
    function_param (62)
        on left: 12 13
        on right: 13 23
    method_call (63)
        on left: 14 15
        on right: 47
    exp <ast::Exp*> (64)
        on left: 16 17 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47
        on right: 1 5 7 8 10 11 12 13 14 19 24 25 26 27 28 29 30 31 32 33 34 35 36 38 39 40 41 42 47 50 51 52 53 54 74 75
    lvalue (65)
        on left: 48 49 50
        on right: 21 38 46 47 49 50
    vardec (66)
        on left: 51 52
        on right: 60 73
    fundec (67)
        on left: 53 54 55 56
        on right: 59
    chunks <ast::ChunkList*> (68)
        on left: 57 58 59 60 61
        on right: 2 44 58 59 60 61
    tychunk <ast::TypeChunk*> (69)
        on left: 62 63
        on right: 58 63
    tydec <ast::TypeDec*> (70)
        on left: 64 65 66
        on right: 62 63
    ty <ast::Ty*> (71)
        on left: 67 68 69 70 71
        on right: 64
    classfields (72)
        on left: 72 73 74 75
        on right: 65 66 70 71 73 74 75
    tyfields <ast::fields_type*> (73)
        on left: 76 77
        on right: 53 54 55 56 68 74 75
    tyfields.1 <ast::fields_type*> (74)
        on left: 78 79
        on right: 77 78
    tyfield <ast::Field*> (75)
        on left: 80
        on right: 78 79
    typeid <ast::NameTy*> (76)
        on left: 81 82
        on right: 7 8 19 20 45 52 54 56 66 67 69 71 75 80


State 0

    0 $accept: • program "end of file"
    1 program: • exp
    2        | • chunks
   16 exp: • "integer"
   17    | • "nil"
   18    | • "string"
   19    | • typeid "[" exp "]" "of" exp
   20    | • typeid "{" record_creation "}"
   21    | • lvalue
   22    | • "identifier" "(" ")"
   23    | • "identifier" "(" function_param ")"
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • exp "=" exp
   30    | • exp "<>" exp
   31    | • exp ">" exp
   32    | • exp "<" exp
   33    | • exp ">=" exp
   34    | • exp "<=" exp
   35    | • exp "&" exp
   36    | • exp "|" exp
   37    | • "(" exps ")"
   38    | • lvalue ":=" exp
   39    | • "if" exp "then" exp
   40    | • "if" exp "then" exp "else" exp
   41    | • "while" exp "do" exp
   42    | • "for" "identifier" ":=" exp "to" exp "do" exp
   43    | • "break"
   44    | • "let" chunks "in" exps "end"
   45    | • "new" typeid
   46    | • lvalue "." "identifier" "(" ")"
   47    | • lvalue "." "identifier" "(" exp method_call ")"
   48 lvalue: • "identifier"
   49       | • lvalue "." "identifier"
   50       | • lvalue "[" exp "]"
   51 vardec: • "var" "identifier" ":=" exp
   52       | • "var" "identifier" ":" typeid ":=" exp
   53 fundec: • "function" "identifier" "(" tyfields ")" "=" exp
   54       | • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   55       | • "primitive" "identifier" "(" tyfields ")"
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid
   57 chunks: ε •  ["end of file"]
   58       | • tychunk chunks
   59       | • fundec chunks
   60       | • vardec chunks
   61       | • "import" "string" chunks
   62 tychunk: • tydec
   63        | • tydec tychunk
   64 tydec: • "type" "identifier" "=" ty
   65      | • "class" "identifier" "{" classfields "}"
   66      | • "class" "identifier" "extends" typeid "{" classfields "}"
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "class"       shift, and go to state 5
    "for"         shift, and go to state 6
    "function"    shift, and go to state 7
    "if"          shift, and go to state 8
    "import"      shift, and go to state 9
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "primitive"   shift, and go to state 15
    "type"        shift, and go to state 16
    "var"         shift, and go to state 17
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    $default  reduce using rule 57 (chunks)

    program  go to state 20
    exp      go to state 21
    lvalue   go to state 22
    vardec   go to state 23
    fundec   go to state 24
    chunks   go to state 25
    tychunk  go to state 26
    tydec    go to state 27
    typeid   go to state 28


State 1

   18 exp: "string" •

    $default  reduce using rule 18 (exp)


State 2

   22 exp: "identifier" • "(" ")"
   23    | "identifier" • "(" function_param ")"
   48 lvalue: "identifier" •  ["end of file", "&", ":=", "class", ",", "/", "do", ".", "else", "end", "=", "function", ">=", ">", "import", "in", "[", "<=", "<", "-", "method", "<>", "|", "+", "primitive", "}", "]", ")", ";", "then", "*", "to", "type", "var"]
   81 typeid: "identifier" •  ["{", "["]

    "("  shift, and go to state 29

    "{"       reduce using rule 81 (typeid)
    "["       reduce using rule 48 (lvalue)
    "["       [reduce using rule 81 (typeid)]
    $default  reduce using rule 48 (lvalue)

    reduce/reduce conflict on token "[":
       48 lvalue: "identifier" •
       81 typeid: "identifier" •
      First example: "identifier" • "[" exp "]" "end of file"
      First reduce derivation
        $accept
        ↳ 0: program                                           "end of file"
             ↳ 1: exp
                  ↳ 21: lvalue
                        ↳ 50: lvalue               "[" exp "]"
                              ↳ 48: "identifier" •
      Second example: "identifier" • "[" exp "]" "of" exp "end of file"
      Second reduce derivation
        $accept
        ↳ 0: program                                              "end of file"
             ↳ 1: exp
                  ↳ 19: typeid               "[" exp "]" "of" exp
                        ↳ 81: "identifier" •



State 3

   16 exp: "integer" •

    $default  reduce using rule 16 (exp)


State 4

   43 exp: "break" •

    $default  reduce using rule 43 (exp)


State 5

   65 tydec: "class" • "identifier" "{" classfields "}"
   66      | "class" • "identifier" "extends" typeid "{" classfields "}"

    "identifier"  shift, and go to state 30


State 6

   42 exp: "for" • "identifier" ":=" exp "to" exp "do" exp

    "identifier"  shift, and go to state 31


State 7

   53 fundec: "function" • "identifier" "(" tyfields ")" "=" exp
   54       | "function" • "identifier" "(" tyfields ")" ":" typeid "=" exp

    "identifier"  shift, and go to state 32


State 8

   16 exp: • "integer"
   17    | • "nil"
   18    | • "string"
   19    | • typeid "[" exp "]" "of" exp
   20    | • typeid "{" record_creation "}"
   21    | • lvalue
   22    | • "identifier" "(" ")"
   23    | • "identifier" "(" function_param ")"
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • exp "=" exp
   30    | • exp "<>" exp
   31    | • exp ">" exp
   32    | • exp "<" exp
   33    | • exp ">=" exp
   34    | • exp "<=" exp
   35    | • exp "&" exp
   36    | • exp "|" exp
   37    | • "(" exps ")"
   38    | • lvalue ":=" exp
   39    | • "if" exp "then" exp
   39    | "if" • exp "then" exp
   40    | • "if" exp "then" exp "else" exp
   40    | "if" • exp "then" exp "else" exp
   41    | • "while" exp "do" exp
   42    | • "for" "identifier" ":=" exp "to" exp "do" exp
   43    | • "break"
   44    | • "let" chunks "in" exps "end"
   45    | • "new" typeid
   46    | • lvalue "." "identifier" "(" ")"
   47    | • lvalue "." "identifier" "(" exp method_call ")"
   48 lvalue: • "identifier"
   49       | • lvalue "." "identifier"
   50       | • lvalue "[" exp "]"
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 33
    lvalue  go to state 22
    typeid  go to state 28


State 9

   61 chunks: "import" • "string" chunks

    "string"  shift, and go to state 34


State 10

   44 exp: "let" • chunks "in" exps "end"
   51 vardec: • "var" "identifier" ":=" exp
   52       | • "var" "identifier" ":" typeid ":=" exp
   53 fundec: • "function" "identifier" "(" tyfields ")" "=" exp
   54       | • "function" "identifier" "(" tyfields ")" ":" typeid "=" exp
   55       | • "primitive" "identifier" "(" tyfields ")"
   56       | • "primitive" "identifier" "(" tyfields ")" ":" typeid
   57 chunks: ε •  ["in"]
   58       | • tychunk chunks
   59       | • fundec chunks
   60       | • vardec chunks
   61       | • "import" "string" chunks
   62 tychunk: • tydec
   63        | • tydec tychunk
   64 tydec: • "type" "identifier" "=" ty
   65      | • "class" "identifier" "{" classfields "}"
   66      | • "class" "identifier" "extends" typeid "{" classfields "}"

    "class"      shift, and go to state 5
    "function"   shift, and go to state 7
    "import"     shift, and go to state 9
    "primitive"  shift, and go to state 15
    "type"       shift, and go to state 16
    "var"        shift, and go to state 17

    $default  reduce using rule 57 (chunks)

    vardec   go to state 23
    fundec   go to state 24
    chunks   go to state 35
    tychunk  go to state 26
    tydec    go to state 27


State 11

    5 exps: • exp rec_exps
    6     | ε •  [")"]
   16 exp: • "integer"
   17    | • "nil"
   18    | • "string"
   19    | • typeid "[" exp "]" "of" exp
   20    | • typeid "{" record_creation "}"
   21    | • lvalue
   22    | • "identifier" "(" ")"
   23    | • "identifier" "(" function_param ")"
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • exp "=" exp
   30    | • exp "<>" exp
   31    | • exp ">" exp
   32    | • exp "<" exp
   33    | • exp ">=" exp
   34    | • exp "<=" exp
   35    | • exp "&" exp
   36    | • exp "|" exp
   37    | • "(" exps ")"
   37    | "(" • exps ")"
   38    | • lvalue ":=" exp
   39    | • "if" exp "then" exp
   40    | • "if" exp "then" exp "else" exp
   41    | • "while" exp "do" exp
   42    | • "for" "identifier" ":=" exp "to" exp "do" exp
   43    | • "break"
   44    | • "let" chunks "in" exps "end"
   45    | • "new" typeid
   46    | • lvalue "." "identifier" "(" ")"
   47    | • lvalue "." "identifier" "(" exp method_call ")"
   48 lvalue: • "identifier"
   49       | • lvalue "." "identifier"
   50       | • lvalue "[" exp "]"
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    $default  reduce using rule 6 (exps)

    exps    go to state 36
    exp     go to state 37
    lvalue  go to state 22
    typeid  go to state 28


State 12

   16 exp: • "integer"
   17    | • "nil"
   18    | • "string"
   19    | • typeid "[" exp "]" "of" exp
   20    | • typeid "{" record_creation "}"
   21    | • lvalue
   22    | • "identifier" "(" ")"
   23    | • "identifier" "(" function_param ")"
   24    | • "-" exp
   24    | "-" • exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • exp "=" exp
   30    | • exp "<>" exp
   31    | • exp ">" exp
   32    | • exp "<" exp
   33    | • exp ">=" exp
   34    | • exp "<=" exp
   35    | • exp "&" exp
   36    | • exp "|" exp
   37    | • "(" exps ")"
   38    | • lvalue ":=" exp
   39    | • "if" exp "then" exp
   40    | • "if" exp "then" exp "else" exp
   41    | • "while" exp "do" exp
   42    | • "for" "identifier" ":=" exp "to" exp "do" exp
   43    | • "break"
   44    | • "let" chunks "in" exps "end"
   45    | • "new" typeid
   46    | • lvalue "." "identifier" "(" ")"
   47    | • lvalue "." "identifier" "(" exp method_call ")"
   48 lvalue: • "identifier"
   49       | • lvalue "." "identifier"
   50       | • lvalue "[" exp "]"
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 38
    lvalue  go to state 22
    typeid  go to state 28


State 13

   45 exp: "new" • typeid
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "identifier"  shift, and go to state 39
    "_namety"     shift, and go to state 19

    typeid  go to state 40


State 14

   17 exp: "nil" •

    $default  reduce using rule 17 (exp)


State 15

   55 fundec: "primitive" • "identifier" "(" tyfields ")"
   56       | "primitive" • "identifier" "(" tyfields ")" ":" typeid

    "identifier"  shift, and go to state 41


State 16

   64 tydec: "type" • "identifier" "=" ty

    "identifier"  shift, and go to state 42


State 17

   51 vardec: "var" • "identifier" ":=" exp
   52       | "var" • "identifier" ":" typeid ":=" exp

    "identifier"  shift, and go to state 43


State 18

   16 exp: • "integer"
   17    | • "nil"
   18    | • "string"
   19    | • typeid "[" exp "]" "of" exp
   20    | • typeid "{" record_creation "}"
   21    | • lvalue
   22    | • "identifier" "(" ")"
   23    | • "identifier" "(" function_param ")"
   24    | • "-" exp
   25    | • exp "+" exp
   26    | • exp "-" exp
   27    | • exp "*" exp
   28    | • exp "/" exp
   29    | • exp "=" exp
   30    | • exp "<>" exp
   31    | • exp ">" exp
   32    | • exp "<" exp
   33    | • exp ">=" exp
   34    | • exp "<=" exp
   35    | • exp "&" exp
   36    | • exp "|" exp
   37    | • "(" exps ")"
   38    | • lvalue ":=" exp
   39    | • "if" exp "then" exp
   40    | • "if" exp "then" exp "else" exp
   41    | • "while" exp "do" exp
   41    | "while" • exp "do" exp
   42    | • "for" "identifier" ":=" exp "to" exp "do" exp
   43    | • "break"
   44    | • "let" chunks "in" exps "end"
   45    | • "new" typeid
   46    | • lvalue "." "identifier" "(" ")"
   47    | • lvalue "." "identifier" "(" exp method_call ")"
   48 lvalue: • "identifier"
   49       | • lvalue "." "identifier"
   50       | • lvalue "[" exp "]"
   81 typeid: • "identifier"
   82       | • "_namety" "(" "integer" ")"

    "string"      shift, and go to state 1
    "identifier"  shift, and go to state 2
    "integer"     shift, and go to state 3
    "break"       shift, and go to state 4
    "for"         shift, and go to state 6
    "if"          shift, and go to state 8
    "let"         shift, and go to state 10
    "("           shift, and go to state 11
    "-"           shift, and go to state 12
    "new"         shift, and go to state 13
    "nil"         shift, and go to state 14
    "while"       shift, and go to state 18
    "_namety"     shift, and go to state 19

    exp     go to state 44
    lvalue  go to state 22
    typeid  go to state 28


State 19

   82 typeid: "_namety" • "(" "integer" ")"

    "("  shift, and go to state 45


State 20

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 46


State 21
